<resources>
    <string name="app_name">Absenti.fy</string>
    <string name="register">Register</string>
    <string name="welcome_to_absenti_fy">welcome to absenti.fy</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="cne">CNE</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="cin">CIN</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="semester">Semester</string>
    <string name="branch">Branch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_image">user image</string>
    <string name="dashboard">Dashboard</string>
    <string name="card_image">card image</string>
    <string name="my_classes">Classes</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- Strings related to teacher dashboard -->
    <string name="generate_qr">Generate QR Code</string>
    <string name="absence_list">Absence List</string>
    <string name="my_profile">My Profile</string>
    <string name="update">Update</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="enter_your_email_address_and_we_will_send_you_a_link_to_reset_your_password">Enter your email address and we will send you a link to reset your password.</string>
    <string name="bottom_sheet_handle">bottom sheet handle</string>
    <string name="forget_password">Forget Password?</string>
    <string name="pick_image">Pick image</string>
    <string name="my_stats">My stats</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="language">Language</string>
    <string name="arabic">العربية</string>
    <string name="frensh">Français</string>
    <string name="english">English</string>
    <string name="be_modern_and_save_time">be modern and save time</string>
    <string name="system_settings">System Settings</string>
    <string name="session_settings">Session Settings</string>
    <string name="about">About</string>
    <string name="about_app">About App</string>
    <string name="credits">Credits</string>
    <string name="change_theme">Change theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="date_of_seance">Date of seance</string>
    <string name="add_new_seance">Add new seance</string>
    <string name="seance_details">Seance details</string>
    <string name="type_of_seance">Type of seance</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="salle">Salle</string>
    <string name="add">ADD</string>
    <string name="back">back</string>
    <string name="total_absences">Total absences</string>
    <string name="submit">submit</string>
    <string name="search_student">Search student...</string>
    <string name="absence_status">Absence status</string>
    <string name="about_dialog_message">Absence Management App is an app that allows students to scan QR codes to mark their attendance. It also allows teachers to view the attendance of their students.</string>
    <string name="ok">OK</string>
    <string name="credits_dialog_message">⚡ The app is developed by:\n\n💗 @abdellatif-laghjaj\n💗 @omar-lamine\n\n***************************\n⚡ Animations by LottieFiles.com\n🚀 Icons by icons8.com</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_required">Email is required</string>
    <string name="success">Success</string>
    <string name="password_reset_link_sent">Password reset link has been sent to your email. If you don\'t see the email, please check your spam folder.</string>
    <string name="failed">Failed</string>
    <string name="failed_to_send_password_reset_link">Failed to send password reset link</string>
    <string name="email_sent">Email sent</string>
    <string name="email_not_sent">Email not sent</string>
    <string name="failed_to_add_seance">Failed to add seance</string>
    <string name="generating_qr_code">Generating QR Code</string>
    <string name="please_wait">Please wait...🚀</string>
    <string name="qr_code_saved">Qr code saved successfully</string>
    <string name="failed_to_save_qr_code">Failed to save QR code</string>
    <string name="type_required">Type is required</string>
    <string name="date_required">Date is required</string>
    <string name="start_time_required">Start time is required</string>
    <string name="end_time_required">End time is required</string>
    <string name="salle_required">Salle is required</string>
    <string name="connection_error">Connection error</string>
    <string name="problem_url">Problem in URL !</string>
    <string name="qr_code_saved_to_gallery">QR Code saved in your gallery, you can share it now 🚀</string>
    <string name="permission_denied">Permission denied</string>
    <string name="camera_permission_required">Camera permission is required to use this feature</string>
    <string name="huray">Hurrayy !</string>
    <string name="mared_as_present">You have been successfully marked as present 🫡</string>
    <string name="accept_permissions">Please accept the required permissions</string>
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="cin_required">CIN is required</string>
    <string name="cne_required">CNE is required</string>
    <string name="filiere_required">Filiere is required</string>
    <string name="semester_required">Semester is required</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="failed_upload_image">Failed to upload image</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="uploading">Uploading...</string>
    <string name="uploading_image">Please wait while we upload and process the image</string>
    <string name="you_have_not_pick_image">You haven\'t picked an image</string>
    <string name="logging_in">Logging in</string>
    <string name="logging_you_to_space">Logging you to you space 🚀</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="password_required">Password is required</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_connection">Please check your internet connection and try again</string>
    <string name="exit">Exit</string>
    <string name="here_we_go">Here we go</string>
    <string name="registring_dialog_message">Please wait, while we are creating your space 🚀</string>
    <string name="registration_succes">You have been registered successfully</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="password_weak">Password must be at least 6 characters</string>
    <string name="confirm_password_required">Confirm password is required</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="absence_details">Absence details</string>
    <string name="absence_details_warning">Note that you can change student\'s absence status by toggling the switch above.</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="select_directory">Select a directory</string>
    <string name="export">Export</string>
</resources>