<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/change_language"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Languages -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="16dp"
            android:drawableTint="@color/black"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/english"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_frensh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="16dp"
            android:drawableTint="@color/black"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/frensh"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="16dp"
            android:drawableTint="@color/black"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/arabic"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:padding="8dp"
            android:text="Done" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="Done" />
    </LinearLayout>
</LinearLayout>